tests/baselines/reference/destructuringTypeAssertionsES5_7.errors.txt
destructuringTypeAssertionsES5_7.ts(1,27): error TS2304: Cannot find name 'Foo'.


==== destructuringTypeAssertionsES5_7.ts (1 errors) ====
    var { x } = <any><any>new Foo;
                              ~~~
!!! error TS2304: Cannot find name 'Foo'.